# django-environ-2

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  SECURITY.rst  default.mk  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  docs.yml  lint.yml
docs/: Makefile  conf.py  docutils.conf  essentials.rst  getting-started.rst  index.rst  installation.rst  license.rst  tips.rst  types.rst
environ/: __init__.py  compat.py  environ.py
requirements/: requirements-dev.in  requirements-dev.txt
tests/: .env  asserts.py  conftest.py  fixtures.py  simple_env.txt  test_cache.py  test_db.py  test_db_url.py  test_email.py  test_email_url.py  test_env.py  test_env.txt  test_path.py  test_read_env.py  test_schema.py  test_search.py
tests/fixtures/: test_env.txt  unicode.txt
