# This file is part of the django-environ-2.
#
# Copyright (C) 2021 Serghei Iakovlev <egrep@protonmail.ch>
# Copyright (C) 2013-2021 Daniele Faraglia <daniele.faraglia@gmail.com>
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

[metadata]
license_file = LICENSE
description_file = README.rst
long_description_content_type = text/x-rst

[bdist_wheel]
universal = 1
